--- a/index.html
+++ b/index.html
@@ -18,15 +18,20 @@
                  <button>LOJAS</button>
                  <button>LOCALIZAÇÃO</button>
                  <button>CONTATO</button>
+                 <div id="transition">
+
+                 </div>
              </div>
              <div class="banner">
-
              </div>
              <div class="cabecalho">
                  <a href="">PRODUTOS</a>
                  <a href="">LOJA VIRTUAL</a>
                  <a href="">CURSOS</a>
                  <a href="">SERVIÇOS</a>
+                 <div id="transition2">
+
+                 </div>
              </div>
          </header>
          <section>
