Construção dos botões dos menus - Header

--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
                  <img src="img/logo.fw.png" alt="Logo" id="logofw"> 
              </div>
              <div class="menu">
-                 <button>HOME</button>
-                 <button>NOSSA EMPRESA</button>
-                 <button>LOJAS</button>
-                 <button>LOCALIZAÇÃO</button>
-                 <button>CONTATO</button>
-                 <div id="transition">
-
-                 </div>
+                <ul class="menu-items">
+                    <li><button>HOME</button></li>
+                    <li><button>NOSSA EMPRESA</button></li>
+                    <li><button>LOJAS</button></li>
+                    <li><button>LOCALIZAÇÃO</button></li>
+                    <li><button>CONTATO</button></li>
+                </ul>
              </div>
              <div class="banner">
              </div>
@@ -38,19 +37,19 @@
              <div class="lojaVirtual"> 
                  <h1>LOJA VIRTUAL</h1>
                  <hr>
-                 <img src="img/imgDroneA.png" alt="Imagem Drone">
+                 <img src="img/imgDroneA.png" alt="Imagem Drone" id="imagemDrone">
                  
                  <div class="drone1">
-                     <img src="img/DroneA.png" alt="drone1">
-                     <img src="img/carrinho.png" alt="carrinho">
+                     <img src="img/DroneA.png" alt="drone1" id="imgDrone1">
+                     <img src="img/carrinho.png" alt="carrinho" id="imgCarrinho1">
                  </div>
                  <div class="drone2">
-                     <img src="img/DroneB.png" alt="drone2">
-                     <img src="img/carrinho.png" alt="carrinho">
+                     <img src="img/DroneB.png" alt="drone2" id="imgDrone2">
+                     <img src="img/carrinho.png" alt="carrinho" id="imgCarrinho2">
                  </div>
                  <div class="drone3">
-                     <img src="img/DroneC.png" alt="drone3">
-                     <img src="img/carrinho.png" alt="carrinho">
+                     <img src="img/DroneC.png" alt="drone3" id="imgDrone3">
+                     <img src="img/carrinho.png" alt="carrinho" id="imgCarrinho3"> 
                  </div>
              </div>
          </section>
@@ -58,7 +57,7 @@
              <div class="servicos">
                  <h1>SERVIÇOS</h1>
                  <hr>
-                 <img src="img/imgDroneB.png" alt="imgDroneB">
+                 <img src="img/imgDroneB.png" alt="imgDroneB" id="imagemDrone2">
                  
                  <div class="cursos">
                      <img src="img/ServicosA.png" alt="img1">
