--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                      <img src="img/carrinho.png" alt="carrinho">
                  </div>
              </div>
-         </section>
-         <section>
+        </section>
+        <section>
              <div class="servicos">
                  <h1>SERVIÇOS</h1>
                  <hr>
@@ -70,19 +70,25 @@
                      <img src="img/ServicosC.png" alt="img3">
                  </div>
              </div>
-         </section>
-         <footer>
-             <div class="final">
-                 <img src="img/logo.png" alt="Logo escrita">
-                 <img src="img/imgDroneC.png" alt="ImgDrone">
-                 <img src="img/imgDroneC.png" alt="ImgDrone">
-                 <img src="img/imgDroneC.png" alt="ImgDrone">
-                 <img src="img/imgProfessor.png" alt="Imagem Professor">
-     
-                 <p>Boa Sorte meu amigo! que sua estrada seja feita de campos verdes para que seus pés caminhem para o sucesso...</p><br>
-                 <p>Boa Sorte de coração!</p>
-             </div>
-         </footer>
+        </section>
+        <footer>
+            <div class="drones">
+                <img class="primeiro" src="img/imgDroneC.png" alt="ImgDrone">
+                <img class="segundo" src="img/imgDroneC.png" alt="ImgDrone">
+                <img class="terceiro" src="img/imgDroneC.png" alt="ImgDrone">
+                <img class="professor" src="img/imgProfessor.png" alt="Imagem Professor">
+            </div>
+            <div class="content">
+                <img src="img/logo.png" alt="Logo escrita">
+                <div class="text">
+                    <p>Boa Sorte meu amigo! que sua estrada seja feita de campos verdes para que seus pés caminhem para o sucesso...</p>
+                    <p>Boa Sorte de coração!</p>
+                </div>
+            </div>
+            <div class="prof">
+                <p>Prof. Bortola</p>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
