ajustes no HTML e estilização da aba serviços

--- a/index.html
+++ b/index.html
@@ -112,33 +112,33 @@
                 <div class="services">
                     <div class="cursos">
                         <img class="img-curso" src="img/ServicosA.png" alt="cursos">
-                        <h2 class="drone-content">CURSOS</h2>
+                        <h2 class="cursos-content">CURSOS</h2>
                         <div class="background-footer-cursos">
                             <div class="footer-cursos">
                                 <div class="footer-cursos-text">
-                                    <p class="descricao">Lorem ipsum dolo</p>
+                                    <p id="descricao">Graças a nossos equipamentos sofisticados podemos lhe oferecer uma experiência incriível de voo e podemos lhe ensinar como realizar uma captação de vídeos e fotos aéreas com alta qualidade voltadas a atender todo o mercado de produção audiovisual. As aulas podem ocorrer também com o equipamento pessoal do aluno.</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="manutencoes">
-                        <img class="img-curso" src="img/ServicosB.png" alt="cursos">
-                        <h2 class="drone-content">MANUTENÇÕES</h2>
-                        <div class="background-footer-cursos">
-                            <div class="footer-cursos">
-                                <div class="footer-cursos-text">
-                                    <p class="descricao">Lorem ipsum dolo</p>
+                        <img class="img-manutencoes" src="img/ServicosB.png" alt="cursos">
+                        <h2 class="manutencoes-content">MANUTENÇÕES</h2>
+                        <div class="background-footer-manutencoes">
+                            <div class="footer-manutencoes">
+                                <div class="footer-manutencoes-text">
+                                    <p id="descricao">Temos um completo Laboratório de eletrônica, nossos técnicos utilizam alta tecnologia para efetuar o reparo do seu Drone. Efetuamos o reparo da câmera GoPro e dos Quadricopteros da linha DJI Phantom e AR.Drone 1.0 e 2.0.</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="filmagemAerea">
-                        <img class="img-curso" src="img/ServicosC.png" alt="cursos">
-                        <h2 class="drone-content">FILMAGENS AEREAS</h2>
-                        <div class="background-footer-cursos">
-                            <div class="footer-cursos">
-                                <div class="footer-cursos-text">
-                                    <p class="descricao">Lorem ipsum dolo</p>
+                        <img class="img-filmagemAerea" src="img/ServicosC.png" alt="cursos">
+                        <h2 class="filmagemAerea-content">FILMAGENS AEREAS</h2>
+                        <div class="background-footer-filmagemAerea">
+                            <div class="footer-filmagemAerea">
+                                <div class="footer-filmagemAerea-text">
+                                    <p id="descricao">Graças a nossos equipamentos sofisticados podemos lhe oferecer uma experiência incrível de voo e podemos lhe ensinar como realizar uma captação de vídeos e fotos aéreas com alta qualidade voltadas a atender todo o mercado de produção audiovisual. As aulas podem ocorrer também com o equipamento pessoal do aluno.</p>
                                 </div>
                             </div>
                         </div>
