ajustes flexbox aba servicos

--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
             </div>
          </section>
          <section id="servicos">
-             <div class="servicos">
+            <div class="servicos">
                  <h1>SERVIÇOS</h1>
-                 <hr>
+                 <hr class="hrServices">
                  <img src="img/imgDroneB.png" alt="imgDroneB" id="imagemDrone2">
                 <div class="services">
                     <div class="cursos">
@@ -144,7 +144,7 @@
                         </div>
                     </div>
                 </div>
-             </div>
+            </div>
          </section>
          <footer>
             <div class="drones">
