Últimos ajustes no footer e conferindo as proporções

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                                     <h5 class="drone-footer-2-drone-red">24x R$ 500,00</h5>
                                 </div>
                         
-                                <div class="carrinho">
+                                <div class="carrinho2">
                                     <img src="img/carrinho.png" alt="carrinho">
                                 </div>
                             </div>
